# NeMo-Curator

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  PR2075_E2E_WALL_TIME_PROMPT.md  README.md  WEBDATASET_REDUCTION_PLAN.md  pyproject.toml
.claude/skills/getting-started/: SKILL.md
.github/: copilot-instructions.md
.github/actions/build-container/: action.yml
.github/actions/test-template/: action.yml
.github/workflows/: build-test-publish-wheel.yml  cicd-main.yml  claude-review.yml  install-test.yml  release.yml
.github/workflows/config/: .secrets.baseline
benchmark_results/: INTERLEAVED_IO_BENCHMARK.md
benchmarking/: README.md  local-cc-e2e.yaml  nightly-benchmark.yaml  run.py  symmetric-local.yaml  symmetric-smoke-test.yaml  test-paths.yaml
benchmarking/data_prep/: prepare_fleurs_data.py
benchmarking/runner/: entry.py  gpu_stats_recorder.py  path_resolver.py  session.py  utils.py
benchmarking/runner/sinks/: slack_sink.py
benchmarking/scripts/: alm_pipeline_benchmark.py  arxiv_e2e_pipeline_benchmark.py  audio_fleurs_benchmark.py  audio_sortformer_benchmark.py  audio_tagging_benchmark.py  cc_e2e_pipeline_benchmark.py  embedding_backend_benchmark.py  generate_benchmark_comparison.py  multimodal_io_benchmark.py  multimodal_mint1t_benchmark.py  multimodal_parquet_3format_benchmark.py  multimodal_parquet_to_wds_benchmark.py  multimodal_single_input_benchmark.py  multimodal_symmetric_benchmark.py  ndd_benchmark.py  nemotron_parse_pdf_benchmark.py  run_all_format_benchmarks.sh  run_mint1t_benchmark_all.sh  test_merged_parquet_3format_write.py  utils.py  verify_cross_format_consistency.py
benchmarking/tools/: ci_benchmark_launcher.sh  gen_runscript_vars.py  generate_ci_tests.py
docker/: Dockerfile
docs/: README.md  code_annotation_plan.md
eval/video/: README.md  build_benchmark_dataset.py  caption_clipscore.py
examples/code_annotation/: annotate_code.py  filter_code.py
fern/: README.md  docs.yml  fern.config.json
nemo_curator/: package_info.py
nemo_curator/backends/: base.py  utils.py
nemo_curator/backends/experimental/: utils.py
nemo_curator/backends/ray_actor_pool/: executor.py  utils.py
nemo_curator/backends/ray_data/: adapter.py  executor.py  utils.py
nemo_curator/backends/xenna/: executor.py
nemo_curator/code_annotation/: README.md  pyproject.toml
nemo_curator/code_annotation/python/code_annotation/: __init__.py
nemo_curator/code_annotation/rust/: Cargo.toml
nemo_curator/code_annotation/rust/macros/src/: lib.rs
nemo_curator/code_annotation/rust/src/: annotations.rs  lib.rs
nemo_curator/code_annotation/rust/src/annotations/: vendored_loc.rs
nemo_curator/config/: run.py
nemo_curator/core/: client.py  utils.py
nemo_curator/core/serve/: __init__.py  constants.py  server.py  subprocess_mgr.py
nemo_curator/models/: prompt_formatter.py  qwen_lm.py  qwen_vl.py  transnetv2.py  vllm_model.py
nemo_curator/models/client/: llm_client.py  openai_client.py
nemo_curator/models/omni/: base.py
nemo_curator/pipeline/: pipeline.py
nemo_curator/stages/: base.py  client_partitioning.py  file_partitioning.py
nemo_curator/stages/audio/: __init__.py  common.py
nemo_curator/stages/code/: __init__.py  code_metrics.py  language_id.py  license_detection.py  modifiers.py  quality_signals.py  stages.py
nemo_curator/stages/interleaved/: README.md  stages.py
nemo_curator/stages/multimodal/: README.md  __init__.py  stages.py
nemo_curator/stages/synthetic/: qa_multilingual_synthetic.py
nemo_curator/tasks/: __init__.py  file_group.py  image.py  interleaved.py  multimodal.py  ocr.py  sentinels.py  tasks.py  utils.py
nemo_curator/utils/: column_utils.py  file_utils.py  hash_utils.py  lance.py  multimodal_utils.py  ray_utils.py  split_large_files.py  vllm_utils.py  webdataset_utils.py  windowing_utils.py
ray-curator/: pyproject.toml
ray-curator/ray_curator/stages/: file_partitioning.py
ray-curator/ray_curator/tasks/: file_group.py  tasks.py
ray-curator/ray_curator/utils/: file_utils.py
ray-curator/tests/backends/: utils.py
ray-curator/tests/stages/: test_add_id.py  test_file_partitioning.py
scripts/: setup_nebius_shared_env.sh  submit_nebius_dripper_stage1_cpu.sh
tests/: L0_Unit_Test_CPU.sh  conftest.py  gpu_test_groups.json
tests/backends/: test_integration.py  test_task_id_postprocess.py  test_utils.py  test_xenna_executor.py  utils.py
tests/backends/ray_actor_pool/: test_executor.py
tests/backends/ray_data/: test_adapter.py  test_max_calls_pid.py  test_utils.py
tests/benchmarking/runner/: test_session.py
tests/code_annotation/: __init__.py  test_annotate.py
tests/config/: test_run.py
tests/core/: test_serve.py
tests/core/serve/: test_runtime_env.py  test_subprocess_mgr.py
tests/eval/video/: test_caption_clipscore.py
tests/image_data/: 00000.tar
tests/models/: test_prompt_formatter.py  test_qwen_lm.py  test_qwen_vl.py
tests/models/omni/: test_base.py
tests/pipelines/: test_per_stage_runtime_env.py  test_pipelines.py
tests/stages/audio/: conftest.py  test_common.py
tests/tasks/: test_file_group_tasks.py  test_multimodal_batch.py  test_ocr.py  test_tasks.py  test_utils.py  test_video.py
tests/utils/: test_file_utils_task_output_path.py  test_hash_utils.py  test_merge_file_prefixes.py  test_ray_utils.py  test_split_large_files.py  test_vllm_utils.py  test_windowing_utils.py
tmp_3_test_output/: explore_outputs.ipynb
tutorials/: README.md  quickstart.py
tutorials/audio/: README.md  README_TEMPLATE.md
tutorials/code/: 00_download_data.sh  01_language_detection.py  02_code_annotation.py  03_code_filtering.py  04_license_detection.py  README.md
tutorials/image/: README.md
tutorials/interleaved/: README.md
tutorials/math/: 1_cc_index_lookup.py
tutorials/multimodal/: README.md  interleaved_data_quickstart.ipynb  mint1t_mvp_pipeline.py  omnicorpus_custom_reader.py  omnicorpus_pipeline.py
tutorials/slurm/: README.md  array_pipeline.py  pipeline.py  retry_array.py  submit_array.sh
tutorials/text/: README.md
(+664 files in other folders)
