# Copyright (c) 2025, NVIDIA CORPORATION.  All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "nemo_curator",
    "nemo_curator.*",
]

[tool.setuptools.package-data]
"nemo_curator.stages.text.experimental.translation" = ["prompts/*.yaml"]

[tool.setuptools.dynamic]
version = { attr = "nemo_curator.package_info.__version__" }

[project]
name = "nemo-curator"
dynamic = ["version"]
authors = [
    { name = "Ayush Dattagupta", email = "adattagupta@nvidia.com" },
    { name = "Abhinav Garg", email = "abhgarg@nvidia.com" },
    { name = "Praateek Mahajan", email = "praateekm@nvidia.com" },
    { name = "Sarah Yurick", email = "syurick@nvidia.com" },
    { name = "Vibhu Jawa", email = "vjawa@nvidia.com" },
]
description = "Scalable Data Preprocessing Tool for Training Large Language Models"
readme = "README.md"
requires-python = ">=3.11,<3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "absl-py>=2.0.0,<3.0.0",
    "comment_parser",
    "cosmos-xenna==0.2.0",
    "fsspec",
    "hydra-core",
    "jieba==0.42.1",
    "loguru",
    "mecab-python3",
    "omegaconf",
    "openai>=1.0.0",
    "pandas>=2.1.0",
    "pyarrow",
    "ray[default,data]>=2.55.1",
    "torch",
    "transformers",
]

[project.optional-dependencies]
cuda12 = [
    "gpustat",
    "nvidia-ml-py",
]
vllm = ["vllm>=0.14.1; (platform_machine == 'x86_64' and platform_system != 'Darwin')"]

# Inference Server (Ray Serve + vLLM) - for serving LLMs alongside Curator pipelines
inference_server = [
    "nemo_curator[cuda12]",
    "nemo_curator[vllm]",
    "vllm<0.19; (platform_machine == 'x86_64' and platform_system != 'Darwin')", # Ray Serve LLM 2.55.1 isn't compatible with vllm 0.19+
    "ai-dynamo==1.1.0; (platform_machine == 'x86_64' and platform_system != 'Darwin')", # pin so the Dynamo actor venv resolves to the same release we test against; gated to x86_64 since vllm wheels are x86_64-only
    "boto3>=1.35", # Get rid once https://github.com/ray-project/ray/issues/61269 is fixed
    "nixl-cu12>=0.10.0; (platform_machine == 'x86_64' and platform_system != 'Darwin')",
    "ray[serve,llm]>=2.55.1",
]

# Installs CPU + GPU text curation modules
deduplication_cuda12 = [
    "cudf-cu12==25.10.*",
    "cuml-cu12==25.10.*",
    "scikit-learn<1.8.0",  # cuml 25.10.0 is incompatible with scikit-learn 1.8.0
    "pylibcugraph-cu12==25.10.*",
    "pylibraft-cu12==25.10.*",
    "raft-dask-cu12==25.10.*",
    "rapidsmpf-cu12==25.10.*",
]

audio_common = [
    # ASR/diarization stack pulls x86_64-only transitives (kaldialign cp313, torchcodec) — gate to x86_64 Linux
    "nemo_toolkit[asr]>=2.7.2; platform_machine == 'x86_64' and platform_system != 'Darwin'",
    "soundfile>=0.12.0",
    "torchaudio",
    "onnx>=1.19.0",
    "silero-vad",
    "librosa",
    "scipy",
    "pydub>=0.25.1",
    "transformers",
    "accelerate",
    "nemo_text_processing; platform_machine == 'x86_64' and platform_system != 'Darwin'",  # pulls pynini, which ships x86_64-only wheels and fails to build on aarch64
    "opencc-python-reimplemented",
    "pyannote-audio>=4.0.0; platform_machine == 'x86_64' and platform_system != 'Darwin'",
    "whisperx>=3.8.4; platform_machine == 'x86_64' and platform_system != 'Darwin'",
]
audio_cpu = [
    "nemo_curator[audio_common]",
    "onnxruntime>=1.20.1,<1.24",
]

audio_cuda12 = [
    "cuda-python>=12.3",
    "nemo_curator[audio_common]",
    "nemo_curator[cuda12]",
    "nvidia-cudnn-cu12",
    "onnxruntime-gpu>=1.20.1,<1.24; platform_machine == 'x86_64'",
    "torchcodec; platform_machine == 'x86_64' and platform_system != 'Darwin'",
]

image_cpu = [
    "Pillow",
    "torchvision"
]

# NVIDIA DALI (simplified; update the package to match your CUDA version if needed)
image_cuda12 = [
    "nemo_curator[image_cpu]",
    "nemo_curator[cuda12]",
    "nemo_curator[deduplication_cuda12]",
    "nvidia-dali-cuda120",
]

# Translation Dependencies
translation_common = [
    "iso639-lang>=2.6.0",
]

translation_metrics = [
    "nemo_curator[translation_common]",
    "sacrebleu>=2.6.0",
]

translation_segmentation = [
    "nemo_curator[translation_common]",
    "spacy>=3.8",
]

translation_aws = [
    "nemo_curator[translation_common]",
    "boto3>=1.35",
]

translation_google = [
    "nemo_curator[translation_common]",
    "google-cloud-translate",
]

translation_nmt = [
    "nemo_curator[translation_common]",
    "aiohttp>=3.13.3",
    "requests",
]

translation_all = [
    "nemo_curator[translation_metrics]",
    "nemo_curator[translation_segmentation]",
    "nemo_curator[translation_aws]",
    "nemo_curator[translation_google]",
    "nemo_curator[translation_nmt]",
]

# Text Curation Dependencies
text_cpu = [
    # Download / Extract
    "beautifulsoup4",
    "justext",
    "lxml",
    "pycld2",
    "resiliparse",
    "s5cmd",
    "trafilatura==2.0.0",
    "warcio",
    "xxhash",
    # Filters
    "fasttext==0.9.3",
    "sentencepiece",
    "mwparserfromhell==0.6.5",
    # Aegis
    "peft",
    # Modifiers
    "ftfy",
    # Embedders
    "sentence-transformers",
]

text_cuda12 = [
    "nemo_curator[cuda12]",
    "nemo_curator[deduplication_cuda12]",
    "nemo_curator[text_cpu]",
    "nemo_curator[vllm]",
]

# Video Curation Dependencies
video_cpu = [
    "av==13.1.0",
    "opencv-python",
    "torchvision",
    "einops",
    "easydict",
]

video_cuda12 = [
    "nemo_curator[video_cpu]",
    "nemo_curator[cuda12]",
    "nemo_curator[vllm]",
    "cvcuda_cu12",
    "flash-attn<=2.8.3; (platform_machine == 'x86_64' and platform_system != 'Darwin')",
    "pycuda",
    "PyNvVideoCodec==2.0.2; (platform_machine == 'x86_64' and platform_system != 'Darwin')",
    "torch<=2.10.0",
    "torchaudio",
]

# Math Curation Dependencies
math_cpu = [
    "nemo_curator[text_cpu]",  # Math examples use text processing utilities
    "boto3>=1.35",  # S3 range requests for Common Crawl WARC fetching
]

math_cuda12 = [
    "nemo_curator[math_cpu]",
    "nemo_curator[cuda12]",
    "nemo_curator[deduplication_cuda12]",
    "vllm>=0.13; (platform_machine == 'x86_64' and platform_system != 'Darwin')",
]

# Multimodal / Interleaved Dependencies
interleaved_cpu = [
    "albumentations",
    "matplotlib",
    "open_clip_torch",
    "opencv-python",
    "Pillow",
    "pypdfium2",
    "s3fs>=2024.12.0",
    "timm",
]

interleaved_cuda12 = [
    "nemo_curator[interleaved_cpu]",
    "nemo_curator[cuda12]",
    "nemo_curator[vllm]",
]

# Synthetic Data Generation (SDG) Dependencies
sdg_cpu = [
    "data-designer==0.5.5",
]

sdg_cuda12 = [
    "nemo_curator[cuda12]",
    "nemo_curator[sdg_cpu]",
    "nemo_curator[inference_server]",
]

# All dependencies
all = [
    "nemo_curator[audio_cuda12]",
    "nemo_curator[image_cuda12]",
    "nemo_curator[inference_server]",
    "nemo_curator[interleaved_cuda12]",
    "nemo_curator[math_cuda12]",
    "nemo_curator[sdg_cuda12]",
    "nemo_curator[text_cuda12]",
    "nemo_curator[translation_all]",
    "nemo_curator[video_cuda12]",
]

[dependency-groups]
build = ["setuptools", "torch<=2.10.0", "Cython", "packaging"]
dev = ["jupyter"]
linting = ["pre-commit", "ruff==0.14.10"]
test = [
    "coverage",
    "debugpy",
    "GitPython",
    "oauth2client",
    "pydrive2",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-httpserver",
    "pytest-loguru",
    "pyyaml",
    "rich",
    "scikit-learn<1.8.0",  # cuml 25.10.0 is incompatible with scikit-learn 1.8.0
    "s3fs>=2024.12.0", # added for testing cloud fs
    "slack_sdk",
]

[tool.uv]
required-version = ">=0.7.0"
package = true
managed = true
default-groups = ["dev", "test"]
index-strategy = "unsafe-best-match"
no-build-isolation-package = ["flash-attn"]
constraint-dependencies = [
    "aiohttp>=3.13.3", # Addresses CVE GHSA-6mq8-rvhq-8wgg
    "cryptography>=46.0.6", # Address CVE GHSA-m959-cc7f-wv43
    "nbconvert>=7.17.0", # Address CVE GHSA-xm59-rqc7-hhvf
    "pillow>=12.1.1", # Address CVE GHSA-cfh3-3jmp-rvhc
    "protobuf>=5.29.6,<7.0", # Address CVE GHSA-8qvm-5x2c-j2w7; <7.0 due to ray serve FieldDescriptor API breakage
    "pyasn1>=0.6.2", # Address CVE GHSA-63vm-454h-vhhq
    "pyopenssl>=26.0.0", # Address CVE GHSA-5pwr-322w-8jr4
    "python-multipart>=0.0.22", # Address CVE GHSA-wp53-j4wj-2cfg
    "starlette>=0.49.1", # Address CVE GHSA-7f5h-v6xp-fcq8
    "urllib3>=2.6.3", # Address CVE GHSA-38jv-5279-wg99
    "wheel>=0.46.2", # Address CVE GHSA-8rrh-rw8j-w5fx
    "transformers>=4.56.0,<5.0", # tranfomers>5 breaks with hf_hub<1.0 added in override
]
override-dependencies = [
    "fsspec>=2025.3.0", # required for nemo-toolkit[asr]==2.7.2 (fsspec==2024.12.0), override due to data-designer-engine==0.5.5 requires >=2025.3.0
    "apex; sys_platform == 'never'",
    "distance; sys_platform == 'never'",
    "huggingface-hub>=0.34,<1.0", # Override huggingface-hub, transformers and data-designer require two different versions of hugging-face hub
    "kaldiio;  sys_platform == 'never'",
    "levenshtein;  sys_platform == 'never'",
    "numpy>=2.0.0,<=2.2.0", # Override nemo-toolkits constraint of <2.0.0, upperbounds for Numba compatibility
    "protobuf>=5.29.5,<7.0",  # Override nemo-toolkits constraint of ~=5.29.5; <7.0 due to ray serve FieldDescriptor API breakage
    "setuptools>=80.10.1", # Override setuptools range in other dependencies to address CVE GHSA-58pv-8j8x-9vj2
    "torch==2.10.0", # Override whisperx's <2.9 cap to match cu129 / vllm 0.18.x
    "torchaudio==2.10.0", # Override whisperx's <2.9 cap to match cu129 / vllm 0.18.x
    "torchvision==0.25.0", # Match torch==2.10.0
    "torchcodec~=0.10.0; platform_machine == 'x86_64' and platform_system != 'Darwin'", # pin to torchcodec 0.10.x for torch 2.10 ABI compatibility — torchcodec doesn't declare a torch dep, so the resolver can't enforce the match; satisfies pyannote-audio's >=0.7.0 floor; x86_64-only since aarch64 lacks wheels
    "nixl-cu12>=0.10.0; (platform_machine == 'x86_64' and platform_system != 'Darwin')",  # Override ray[llm]'s unconditional nixl dep for ARM
    "xgrammar>=0.1.32", # Override vllm's ==0.1.29 pin to address CVE GHSA-7rgv-gqhr-fxg3 (DoS via multi-layer nesting)
]


[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
explicit = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch", marker = "sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')" },
    { index = "pypi", marker = "sys_platform == 'darwin' or (platform_machine != 'x86_64' and platform_machine != 'aarch64')" },
]
torchaudio = [
    { index = "pytorch", marker = "sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')" },
    { index = "pypi", marker = "sys_platform == 'darwin' or (platform_machine != 'x86_64' and platform_machine != 'aarch64')" },
]
torchvision = [
    { index = "pytorch", marker = "sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')" },
    { index = "pypi", marker = "sys_platform == 'darwin' or (platform_machine != 'x86_64' and platform_machine != 'aarch64')" },
]
torchcodec = [
    { index = "pytorch", marker = "platform_machine == 'x86_64' and sys_platform != 'darwin'" },
    { index = "pypi", marker = "platform_machine != 'x86_64' or sys_platform == 'darwin'" },
]
nixl = { index = "pypi" }
nixl-cu12 = { index = "pypi" }

[tool.coverage.paths]
source = ["nemo_curator", "/opt/Curator/nemo_curator", "/home/runner/work/Curator/Curator/nemo_curator"]

[tool.ruff]
line-length = 119
[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",  # pydocstyle
    "PTH",  # use pathlib
    "G",  # no enforcement during logging
    "FBT",  # allow booleans in function / class arguments
    "T20",  # allow printing
    "E501",  # allow line length violations, leave it to Black
    "ANN002",  # don't annotate **args
    "ANN003",  # don't annotate **kwargs
    "ANN204",  # don't annotate self/cls/special methods (__new__)
    "PT013",  # how to import pytest
    "PERF401",  # don't enforce list comprehension
    "RET505", "RET506", "RET507", "RET508",  # allow branching (if else after return)
    "PGH004",  # allow generic noqa

    "TD002",  # allow TODO without author
    "TD003",  # allow TODO without link
    "TRY003", # allow long exception messages rather than creating a new exception class
    "FIX002",  # allow TODO to exist,
    "EXE002", # don't require for a shebang to be present if it's executable
    "COM812", # disable the trailing comma in linter, because ruff formatter ensures it
    "SLF001", # allow accessing private attributes
    "PLC0415", # allow imports inside functions (lazy imports for optional/heavy deps)
]
fixable = ["ALL"]


[tool.ruff.lint.extend-per-file-ignores]
"nemo_curator/__init__.py" = ["F401"]
"examples/**" = [
    "INP001", # no __init__.py is required
]
"tests/**/*.py" = [
    "S101",    # asserts allowed in tests
    "ANN201",  # allow methods to not return something
    "ARG002",  # allow unused method args (mock.patch decorator injects args not always referenced)
    "PLR2004", # magic value used in comparison
    "ERA001",  # allow commented-out code
    "SLF001",  # private member access fine in tests
    "PLW0603", # global statement fine in test fixtures
    "INP001",  # no __init__.py required
    "TCH",     # no need for TYPE_CHECKING in tests
]
# Broader ignores for the dripper experimental test files, which use complex mock
# objects, intentional error message literals, and un-annotated helper functions.
"tests/stages/text/experimental/dripper/**" = [
    "ANN",     # type annotations not required in test helpers
    "BLE001",  # broad exception catch fine in test helpers
    "C901",    # complex test-fixture functions are necessary for full mock coverage
    "EM101",   # exception string literals fine in test helpers
    "EM102",   # exception f-string literals fine in test helpers
    "PLR0913", # too-many-args fine in test helper factories
    "ARG001",  # unused function args fine in mock callbacks (fallback_handler, etc.)
    "PD101",   # series.nunique() is fine for correctness assertions in tests
]
"benchmarking/**" = [
    "BLE001", # allow catching blind exceptions (benchmark runners need catch-all error handling)
]
"docs/**" = [
    "BLE001", # allow catching blind exceptions (Sphinx extensions need robust error handling)
]
"tutorials/**" = [
    "INP001",  # no __init__.py is required
    "PLE2515", # ignore \u200b complaint
    "ANN",     # type annotations not required in tutorial scripts
    "BLE001",  # allow catching blind exceptions in scripts
    "S101",    # allow asserts in scripts
    "S603",    # subprocess calls with shell=False are fine in tutorials
    "S607",    # partial executable paths fine in tutorials
    "TRY",     # try/except style is tutorial-appropriate
    "PERF",    # micro-perf rules too strict for tutorials
    "ERA001",  # allow commented-out code in tutorials
    "FBT",     # boolean args fine in script CLIs
    "PLR2004", # magic values fine in scripts
    "SLF001",  # private member access fine in tutorials using internal APIs
    "TCH",     # no need to move typing imports to TYPE_CHECKING blocks
    "C901",    # complexity checks too strict for scripts
    "PLR0912", # too-many-branches fine in scripts
    "PLR0913", # too-many-args fine in scripts
    "PLR0915", # too-many-statements fine in scripts
    "EM",      # error messages don't need separate variable in scripts
    "G004",    # f-strings in logging fine in scripts
    "ANN401",  # Any type fine in tutorial scripts
    "SIM",     # simplification suggestions too strict for tutorial scripts
    "RUF001",  # unicode chars fine in comments/strings in tutorials
    "RUF002",  # unicode chars fine in docstrings in tutorials
    "RUF003",  # unicode chars fine in comments
    "N806",    # UPPER_CASE constants inside functions are conventional in scripts
    "PLW0602", # global without assignment fine in module-level state pattern
    "PLW0603", # global statement for module-level worker caches is intentional pattern
    "PLW1508", # int defaults for os.environ.get are cast immediately; fine in scripts
    "S301",    # pickle use is intentional (lossless template serialization)
    "S302",    # marshal use not present but suppress
    "PT018",   # composite assert fine in tests helper
    "B023",    # loop variable capture fine in tutorial closures
    "B007",    # unused loop var fine
    "E741",    # ambiguous variable names fine in compact scripts
    "F841",    # unused assignments fine in scripts (often defensive)
    "A004",    # import shadowing builtin fine in tutorial notebooks
    "B905",    # zip without strict= fine in tutorial visualization code
    "E402",    # module-level import not at top fine in notebook cells
    "PLW2901", # loop variable overwrite fine in tutorial scripts
    "B904",    # raise-without-from-cause fine in script error handlers
    "PLR0911", # too-many-return-statements fine in scripts with guard clauses
    "S110",    # try/except/pass fine in optional-feature guards in scripts
    "ICN001",  # lazy internal imports may use non-canonical alias (e.g. _pa)
    "EXE001",  # shebang without executable bit is fine in repo scripts
    "PD008",   # .at vs .loc performance hint irrelevant in tutorial data-processing scripts
    "C408",    # dict() vs {} literal style — fine in tutorials
    "S112",    # try/except/continue with no logging fine in optional-feature guards
]
"nemo_curator/stages/text/experimental/dripper/stage.py" = [
    # Pre-existing errors from the initial checkpoint commit (be40310) that
    # pre-date this PR. Fixing them requires refactoring the llm-webkit wrapper
    # which is out of scope for the layout-clustering feature.
    "ANN401",  # third-party llm-webkit objects have no exportable type
    "B905",    # zip without strict= in llm-webkit interop loops
    "C901",    # complex methods that wrap llm-webkit multi-step protocol
    "EM101",   # exception string literal — llm-webkit error messages
    "EM102",   # exception f-string — llm-webkit error propagation pattern
    "PLR1714", # merged comparisons suggestion — existing hex codepoint check
    "FLY002",  # f-string vs join in helper function
    "PERF403", # dict comprehension suggestion in asyncio gather pattern
    "PIE810",  # endswith with tuple — existing filter pattern
    "PLR0911", # many return statements in guard-clause heavy parsers
    "PLR0912", # many branches in layout-parser dispatch
    "PLR0913", # many args in llm-webkit binding wrappers
    "PLR0915", # many statements in multi-step extraction methods
    "PLR2004", # magic value (constant 3 for triplet scoring)
    "S101",    # assert used as pre-condition checks in llm-webkit calls
    "S324",    # sha1 used for structural fingerprint (not security)
    "TRY300",  # try/return in else — llm-webkit error-handling pattern
    "TRY301",  # raise in try block — llm-webkit error-handling pattern
]
"fern/**/*.py" = [
    "INP001", # Fern CLI helper scripts; not an installable package
]
".github/scripts/**" = [
    "INP001", # CI scripts; not an installable package
]
".claude/skills/**/scripts/**" = [
    "INP001", # skill verification scripts; not an installable package
    "F401",   # imports are intentionally present to verify modules load
    "EXE001", # invoked via `python3 verify_*.py`; shebang is informational
    "ANN001", # type annotations not required for one-shot verification scripts
    "ANN201", # type annotations not required for one-shot verification scripts
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "asyncio",
    "gpu: marks tests as GPU tests (deselect with '-m \"not gpu\"')",
]

[tool.check-manifest]
ignore = [
  "*.md",
  "*.cff",
  "*.lock",
  "*.txt",
  "*.yml",
  "*.yaml",
  "*.json",
  "*.toml",
  "*.sh",
  "*.cfg",
  "Makefile",
  "Dockerfile",
  "MAINTAINERS",
  "CODEOWNERS",
  ".gitattributes",
  ".gitmodules",
  ".markdownlint.json",
  ".secrets.baseline",
  ".pre-commit-config.yaml",
  "api-design.md",
  ".claude/**",
  ".cursor/**",
  ".github/**",
  "benchmarking/**",
  "docker/**",
  "docs/**",
  "examples/**",
  "fern/**",
  "image/**",
  "scripts/**",
  "tests/**",
  "tutorials/**",
  "**/conftest.py",
  "**/test_*.py",
  "**/*.bat",
  "**/.gitkeep",
]
